data/derived/fa15/progs/unify/prog0065.ml.out
Characters 56-57:
  let fixpoint (f,b) = wwhile ((fun x -> (wwhile f*b, b = f b)),b);;
                                                          ^
Error: This expression has type (int -> int * bool) * int
       This is not a function; it cannot be applied.
